--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3>Strategija Monetizacije</h3>
             <ul>
                 <li><strong>Freemium model:</strong> Osnovno besplatno, premium pretplate (3-6 €/mj).</li>
-                <li><strong>Oglasi:</strong> Neljetni u free verziji.</li>
+                <li><strong>Neupadljivi oglasi:</strong> Diskretni banneri u besplatnoj verziji.</li>
                 <li><strong>Partnerstva:</strong> Wellness brendovi i psiholozi.</li>
                 <li><strong>Dodatno:</strong> Prodaja vježbi i e-knjiga.</li>
             </ul>
