--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 Dario Vrankovečki | MoodFit Projekt | Rudjer Bošković, Zagreb | Mentor: Goran Gomaž</p>
+        <p>&copy; 2026 Dario Vrankovečki | MoodFit Projekt | Ruđer Bošković, Zagreb | Mentor: Goran Gomaz</p>
     </footer>
 
     <script>
